cap nhat them cot

--- a/public/pages/admin/components/household.html
+++ b/public/pages/admin/components/household.html
@@ -636,6 +636,7 @@
                                 <th>CCCD</th>
                                 <th>Địa chỉ tạm trú</th>
                                 <th>Từ ngày - Đến ngày</th>
+                                <th>Trạng thái</th>
                                 <th>Thao tác</th>
                             </tr>
                         </thead>
