sua lai api import vao bang ho khau

--- a/public/pages/admin/components/household.html
+++ b/public/pages/admin/components/household.html
@@ -640,7 +640,7 @@
                                 <th>Thao tác</th>
                             </tr>
                         </thead>
-                        <tbody id="listTamTru"></tbody>
+                        <tbody id="residentListBody"></tbody>
                     </table>
                 </div>
             </div>
