--- a/public/pages/admin/components/household.html
+++ b/public/pages/admin/components/household.html
@@ -629,6 +629,13 @@
                         <tbody id="residentListBody"></tbody>
                     </table>
                 </div>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <tbody id="residentListBody">
+                            </tbody>
+                    </table>
+                </div>
+<div id="tamTruPagination" class="pagination-container" style="margin-top: 15px; display: flex; justify-content: flex-end; gap: 5px;"></div>
             </div>
 
             <div id="tabTamVang" class="tab-panel">
